name:                quickcheck-matchers
version:             0.1.0.0
synopsis:            An integration layer between test-matchers and QuickCheck.
-- description
license:             Apache-2.0
license-file:        LICENSE
author:              Roman Kashitsyn
maintainer:          roman.kashitsyn@gmail.com
copyright:           2018-2019 Google LLC
category:            Testing
build-type:          Simple
cabal-version:       2.0

library
  exposed-modules:     Test.Matchers.QuickCheck

  build-depends:       base >= 4.8 && <5
                     , test-matchers <1
                     , QuickCheck >=2.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-orphans