name:                tasty-matchers
version:             0.1.0.0
synopsis:            An integration layer between test-matchers and Tasty.
-- description
license:             Apache-2.0
author:              Roman Kashitsyn
maintainer:          roman.kashitsyn@gmail.com
copyright:           2018 Google LLC
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Test.Matchers.Tasty

  build-depends:       base >= 4.8 && <5
                     , test-matchers <1
                     , tasty >= 0.10
                     , optparse-applicative >= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall