name:                tests
version:             0.1.0.0
synopsis:            Tests for test-matchers and various integrations.
license:             Apache-2.0
author:              Roman Kashitsyn
maintainer:          roman.kashitsyn@gmail.com
copyright:           2018 Google LLC
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

test-suite hunit-matchers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.8 && <5
                     , test-matchers
                     , hunit-matchers
                     , HUnit
                     , hspec
                     , hspec-core
                     , QuickCheck >=2.9
  default-language:    Haskell2010
  ghc-options:         -Wall
